Fix alignment of button that adds new actions

--- a/frontend/src/app/components/action-plan/action-plan.component.scss
+++ b/frontend/src/app/components/action-plan/action-plan.component.scss
@@ -57,5 +57,9 @@
 }
 
 #add-action-icon {
-  margin-left: -0.3rem !important;
+  margin-left: 0;
+}
+
+#add-action-button {
+  margin-left: -0.15rem;
 }
