--- a/frontend/src/app/components/checkin/check-in-form/check-in-form.component.scss
+++ b/frontend/src/app/components/checkin/check-in-form/check-in-form.component.scss
@@ -7,5 +7,9 @@ app-check-in-form-ordinal {
 }
 
 #add-action-icon {
-  margin-left: -0.3rem !important;
+  margin-left: 0;
+}
+
+#add-action-button {
+  margin-left: -0.15rem;
 }
